# dlops_project

./: main.py  mlflow.db  ouptut_result.json  pyproject.toml  scores.json  setup.py
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_2026-05-17-16-11-44/train/: events.out.tfevents.1779014513.DESKTOP-LRAKJUI.6468.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2026-05-17-16-54-17/train/: events.out.tfevents.1779017061.DESKTOP-LRAKJUI.3784.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2026-05-17-16-58-02/train/: events.out.tfevents.1779017283.DESKTOP-LRAKJUI.13736.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2026-05-17-17-04-42/train/: events.out.tfevents.1779017683.DESKTOP-LRAKJUI.8228.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2026-05-17-17-04-42/validation/: events.out.tfevents.1779018018.DESKTOP-LRAKJUI.8228.1.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2026-05-17-17-32-12/train/: events.out.tfevents.1779019335.DESKTOP-LRAKJUI.1196.0.v2
config/: config.yaml
research/: 05_model_evaluation.ipynb  data_ingestion.ipynb  prepare_base_model.ipynb  prepare_callbacks.ipynb  training.ipynb
src/cnnClassifier/components/: evaluation.py  training.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: predict.py  stage_02_prepare_base_model.py  stage_03_training.py
src/cnnClassifier/utils/: common.py
(+1 files in other folders)
